# GraphQLer

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  benchmark.py  conf.py  constants.py  main.py  pyproject.toml  readme.md  requester_test_temp.py  requirements.txt  simple-fuzzer.py
.github/workflows/: code_climate.yml  dockerhub_release.yml  e2e_tests.yml  githubcr_release.yml  integration_tests.yml  lint.yml  pypi_release.yml  release.yml  tests.yml  type_check.yml  unit_tests.yml  unittests.yml
benchmark/: README.md  benchmark.py  benchmark_ablation.py  benchmark_inference_accuracy.py  benchmark_llm_chains.py  benchmark_odg.py  benchmark_oob.py  readme.md
benchmark/ground_truth/: countries.yml  graphql_zero.yml  rick_and_morty.yml
compiler/: compiler.py  introspection_query.py  linker.py  utils.py
compiler/dependency_resolvers/: __init__.py  object_dependency_resolver.py
compiler/parsers/: __init__.py  input_object_list_parser.py  mutation_list_parser.py  object_list_parser.py  parser.py  query_list_parser.py
compiler/resolvers/: __init__.py  mutation_object_resolver.py  object_dependency_resolver.py  object_method_resolver.py  object_query_fuzzy_id_resolver.py  object_query_resolver.py  query_object_resolver.py  resolver.py  utils.py
docs/: CONTRIBUTING.md  architecture.md  fengine.md  graphqler.compiler.parsers.rst  graphqler.compiler.resolvers.rst  graphqler.fuzzer.rst  graphqler.graph.rst  graphqler.utils.rst  installation.md  modules.rst  plugins.md
examples/: config.toml  grammar-example.yml  starwars_grammer.yml
fengine/: constants.py  fengine.py
fengine/attacks/: ddos_attack.py  replace_parameters.py
fengine/fuzzers/: constants.py  ddos_fuzzer.py  defaults.py  fuzzer.py  replace_params_fuzzer.py
fuzzer/: __init__.py  fengine.py  fuzzer.py  idor_fuzzer.py  utils.py
fuzzer/fengine/: fengine.py  utils.py
fuzzer/materializers/: __init__.py  regular_mutation_materializer.py  utils.py
graph/: __init__.py  graph_generator.py  node.py  utils.py
graphqler/: __main__.py  config.py  constants.py  core.py
graphqler/chains/: __init__.py  chain.py  chain_generator.py
graphqler/compiler/: __init__.py  compiler.py
graphqler/examples/: config.toml
graphqler/fuzzer/: __init__.py  fuzzer.py  idor_fuzzer.py  utils.py
graphqler/graph/: __init__.py  graph_generator.py  node.py  utils.py
graphqler/mcp/: server.py
graphqler/mcp_utils/: __init__.py  server.py
graphqler/tui/: __init__.py  app.py  graphqler.tcss  logging_handler.py
graphqler/utils/: api.py  argument_parser.py  cli_utils.py  config_handler.py  detection_writer.py  file_utils.py  llm_utils.py  logging_utils.py  objects_bucket.py  parser_utils.py  plugins_handler.py  request_utils.py  response_utils.py  singleton.py  stats.py  websocket_utils.py
graphqler_types/: __init__.py  field.py  graphql_data_type.py  graphql_request.py  input.py  mutation.py  object.py  output.py  query.py
linker/: linker.py
linker/serializers/: __init__.py  objects_serializer.py
old-docs/: installation.md
sample-graphql-apis/api-security-api/: package-lock.json  package.json
sample-graphql-apis/food-delivery-api/: README.md  dbinitializer.js  dockerfile  (+4 more)
serializer/: serializer.py
sphinx/: conf.py  index.rst
static/: readme.md
utils/: argument_parser.py  grammar_parser.py  graph_parser.py  graphql_request.py  logging_utils.py  orchestrator.py  orchestrator2.py  parser_utils.py  request_utils.py  requester.py  requester_test_temp.py  sequence_generation.py  stats.py  utils.py
(+288 files in other folders)
